# apexsim

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml  versions.json
.github/constraints/: ci-quality.txt
.github/workflows/: ci.yml  docs-dev.yml  docs-stable.yml  docs.yml
0.1.0/: 404.html  index.html  objects.inv  sitemap.xml
0.1.0/API/: index.html
0.1.0/ASSUMPTIONS/: index.html
0.1.0/BACKENDS/: index.html
0.1.0/BICYCLE_MODEL/: index.html
0.1.0/DEVELOPMENT/: index.html
0.1.0/EXAMPLES/: index.html
0.1.0/EXAMPLES_SPA/: index.html
0.1.0/EXAMPLES_SYNTHETIC/: index.html
0.1.0/HOW_TO_USE/: index.html
0.1.0/POINT_MASS_MODEL/: index.html
0.1.0/SINGLE_TRACK_MODEL/: index.html
0.1.0/SOLVER/: index.html
0.1.0/search/: search_index.json
0.1.1/: 404.html  index.html  objects.inv  sitemap.xml
0.1.1/API/: index.html
0.1.1/ASSUMPTIONS/: index.html
0.1.1/BICYCLE_MODEL/: index.html
0.1.1/DEVELOPMENT/: index.html
0.1.1/EXAMPLES/: index.html
0.1.1/EXAMPLES_SPA/: index.html
0.1.1/EXAMPLES_SYNTHETIC/: index.html
0.1.1/HOW_TO_USE/: index.html
0.1.1/POINT_MASS_MODEL/: index.html
0.1.1/SOLVER/: index.html
0.2.0/: 404.html  index.html  sitemap.xml
0.2.0/API/: index.html
0.2.0/ASSUMPTIONS/: index.html
0.2.0/BACKENDS/: index.html
0.2.0/DEVELOPMENT/: index.html
0.2.0/EXAMPLES/: index.html
0.2.0/EXAMPLES_SYNTHETIC/: index.html
0.2.0/HOW_TO_USE/: index.html
0.2.0/POINT_MASS_MODEL/: index.html
0.2.0/SINGLE_TRACK_MODEL/: index.html
0.2.0/SOLVER/: index.html
0.2.1/: 404.html  index.html  sitemap.xml
0.2.1/API/: index.html
0.2.1/ASSUMPTIONS/: index.html
0.2.1/BACKENDS/: index.html
0.2.1/DEVELOPMENT/: index.html
0.2.1/EXAMPLES/: index.html
0.2.1/EXAMPLES_SYNTHETIC/: index.html
0.2.1/HOW_TO_USE/: index.html
0.2.1/POINT_MASS_MODEL/: index.html
0.2.1/SINGLE_TRACK_MODEL/: index.html
0.2.1/SOLVER/: index.html
0.3.0/: 404.html  index.html  sitemap.xml
0.3.0/API/: index.html
0.3.0/ASSUMPTIONS/: index.html
0.3.0/BACKENDS/: index.html
0.3.0/DEVELOPMENT/: index.html
0.3.0/EXAMPLES/: index.html
0.3.0/EXAMPLES_SYNTHETIC/: index.html
0.3.0/HOW_TO_USE/: index.html
0.3.0/POINT_MASS_MODEL/: index.html
0.3.0/SINGLE_TRACK_MODEL/: index.html
0.3.0/SOLVER/: index.html
0.3.0/javascripts/: mathjax.js
data/: README.md  spa_francorchamps.csv
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/API/: index.html
dev/ASSUMPTIONS/: index.html
dev/BACKENDS/: index.html
dev/BICYCLE_MODEL/: index.html
dev/DEVELOPMENT/: index.html
dev/EXAMPLES/: index.html
dev/EXAMPLES_SPA/: index.html
dev/EXAMPLES_SYNTHETIC/: index.html
dev/HOW_TO_USE/: index.html
dev/POINT_MASS_MODEL/: index.html
dev/SINGLE_TRACK_MODEL/: index.html
dev/SOLVER/: index.html
dev/search/: search_index.json
docs/: API.md  ASSUMPTIONS.md  BACKENDS.md  BICYCLE_MODEL.md  DEVELOPMENT.md  EXAMPLES.md  EXAMPLES_SPA.md  EXAMPLES_SYNTHETIC.md  HOW_TO_USE.md  POINT_MASS_MODEL.md  SINGLE_TRACK_MODEL.md  SOLVER.md  index.md
docs/reference/: analysis.md  apexsim.md  pylapsim.md  simulation.md  tire.md  track.md  vehicle.md
examples/: backend_benchmarks.py  spa_lap.py  spa_lap_bicycle.py  spa_lap_point_mass.py  spa_lap_single_track.py  spa_model_comparison.py  synthetic_track_scenarios.py
examples/sensitivity/: common.py  spa_single_track_sensitivity.py  synthetic_single_track_sensitivity.py
examples/spa/: common.py  spa_lap_point_mass.py  spa_lap_single_track.py  spa_model_comparison.py  spa_performance_envelope.py
examples/transient/: common.py  transient_point_mass_lap.py  transient_single_track_lap.py
scripts/: benchmark_solver_matrix.py  compare_solver_benchmarks.py  import_spa_from_tumftm.py
tests/: conftest.py  helpers.py
(+249 files in other folders)
