[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "lap-time-sim"
version = "0.1.0"
description = "Lap time simulation library based on a 3-DOF bicycle model"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Lap Time Sim Team" }
]
dependencies = [
  "numpy>=2.0",
  "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.9",
  "mypy>=1.13",
]

[tool.pytest.ini_options]
addopts = "-q --cov=lap_time_sim --cov-report=term-missing --cov-fail-under=95"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "W", "D"]
ignore = ["E203"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
show_error_codes = true
mypy_path = ["src"]

[tool.coverage.run]
source = ["lap_time_sim"]
branch = true
