[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "apexsim"
version = "0.1.0"
description = "Lap time simulation library with interchangeable bicycle and point-mass models"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "Lap Time Sim Team" }
]
dependencies = [
  "numpy>=2.0",
  "matplotlib>=3.8",
  "pandas>=2.2",
  "scipy>=1.13",
  "torchdiffeq>=0.2.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.9",
  "mypy>=1.13",
  "torch>=2.10",
  "numba>=0.63",
  "scipy>=1.13",
  "torchdiffeq>=0.2.5",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocs-jupyter>=0.25",
  "mkdocstrings[python]>=0.27",
  "mike>=2.1",
]
torch = [
  "torch>=2.10",
]
numba = [
  "numba>=0.63",
]
transient = [
  "scipy>=1.13",
  "torchdiffeq>=0.2.5",
]

[tool.pytest.ini_options]
addopts = "-q --cov=apexsim --cov-report=term-missing --cov-fail-under=95"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "W", "D"]
ignore = ["E203"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
show_error_codes = true
mypy_path = ["src"]

[tool.coverage.run]
source = ["apexsim"]
branch = true
